--- a/Xshell/2022-01-26-xshell-中国风配色教程.markdown
+++ b/Xshell/2022-01-26-xshell-中国风配色教程.markdown
@@ -1,35 +1,78 @@
 ---
 layout: "post"
-title: "Xshell 中国风配色教程"
+title: "Xshell 好看的配色教程"
 date: "2022-01-26 17:54"
 ---
 
-# Xshell7 中国风配色教程
+# Xshell7 好看的配色教程
 
 ***
 
+## 效果展示
+
+![Ubuntu](/images/2022/01/ubuntu.png)
+
 ## Xshell7 的安装
 进入Xshell官网下载[个人免费版](https://www.netsarang.com/en/free-for-home-school/)，下载链接会发送到你填写的邮箱里，速度有点慢，需要翻墙加速一下。
-## 字体的修改
 
+## 字体的修改
+字体调整成经典的Mono字体，大小调整为10。
+
+![Mono](/images/2022/01/mono.png)
 
 ## 配色方案的配置
 
 配色方案的使用请参考[Xshell 一款很养眼的配色方案推荐](https://www.cnblogs.com/weifeng1463/p/8594319.html)配置，下载配色文件导入应用即可。
 
-我自己配色文件是在[Xshell 一款很养眼的配色方案推荐](https://www.cnblogs.com/weifeng1463/p/8594319.html)基础上修改的，简单的修改了一下字体的颜色。
+我自己配色文件是在**Xshell 一款很养眼的配色方案推荐**基础上修改的，简单的修改字体颜色为景泰蓝。
 
-
+[我的配色文件](/Xshell/style/skycolor-2.xcs)
 
 ## 突出显示集的配置
 
-使用正则表达式匹配文本内容，从而更改特定文本的颜色。不懂正则表达式的可以看看这个[菜鸟教程-正则表达式](https://www.runoob.com/regexp/regexp-tutorial.html)
+工具->突出显示集->新建->添加
 
+或者直接点击像小火箭的图标打开突出显示集菜单 ![突出显示集toolbar](/images/2022/01/突出显示集toolbar.png)
 
-正则表达式  | 颜色  | 说明  | 备用  
---|---|---|--
-  |   |   |  
-  |   |   |  
+点击添加后，出现如下界面
+
+![添加正则表达式](/images/2022/01/添加正则表达式.png)
+
+在**要强调的关键字**下的文本框**输入正则表达式，勾选正则表达式，勾选终端颜色**，接着点击**文本颜色**。
+
+![文本颜色](/images/2022/01/文本颜色.png)
+
+点击用户自定义，出现如下界面
+
+![添加颜色](/images/2022/01/添加颜色.png)
+
+输入**RGB值**得到想要的颜色，再点击**添加到自定义颜色**，方便下次再使用。
+
+使用正则表达式匹配文本内容，从而更改特定文本的颜色。不懂正则表达式的可以看看这个[菜鸟教程-正则表达式](https://www.runoob.com/regexp/regexp-tutorial.html)，自己用到的所有正则表达式和配色表在这里，按下表添加好所有的规则，突出显示集就配置好了。
+
+正则表达式                                                        | (R, G, B)           | 说明            | 颜色名称
+------------------------------------------------------------------|---------------------|-----------------|----------
+^\\(.*?\\)                                                        | (79, 121, 74)       | Conda env       | 芰荷     
+.\*@.\*:~\\$                                                      | (179, 119, 69)      | Username        | 琵琶茶   
+:~\\$\\s?(sudo\\s+)?[A-Za-z]+\\s?                                 | (254, 220, 94)      | 命令名          | 黄栗留   
+:~\\$\\s?[A-Za-z]+\\s+(\\S+\\s?)+                                 | (90, 164, 174)      | 参数            | 天水碧  
+\\s\\d+\\s                                                        | (239, 196, 206)     | 数字            | 粉米    
+([0-9]{1,3})\\.([0-9]{1,3})\\.([0-9]{1,3})\\.([0-9]{1,3})(:\\d+)? | (254, 220, 94)      | IPV4            | 黄栗留   
+".*?"                                                             | (239, 196, 206)     |                 | 粉米    
+'.*?'                                                             | (239, 196, 206)     |                 | 粉米     
+\\(.*\\)                                                          | (239, 196, 206)     |                 | 粉米     
+\\[.*\\]                                                          | (239, 196, 206)     |                 | 粉米     
+\\{.*\\}                                                          | (239, 196, 206)     |                 | 粉米     
+https?://([\\w-]+\\.)+[\\w-]+(/[\\w-./?%&=]*)?$                   | (90, 164, 174)      | URL             | 天水碧   
+^\\d{4}-\\d{1,2}-\\d{1,2}                                         | (239, 196, 206)     | 日期            | 粉米     
+\\s([\\d-]+\\.)+[0-9a-zA-Z-]+\\s?                                 | (239, 196, 206)     | xx.xx.xx...     | 粉米     
+[\\s\|-]+(\\d+:)+\\d+\\s?                                         | (239, 196, 206)     | 时间            | 粉米
+\\s\\/(\\w+\\/?)+\\s?                                             | (90, 164, 174)      | 文件路径        | 天水碧   
+
+完成后如下所示
+
+![新建突出显示集](/images/2022/01/新建突出显示集.png)
+
 
 ## 按键对应的配置
 
@@ -39,3 +82,10 @@ date: "2022-01-26 17:54"
 -----------------|-----
 Ctrl + Shift + C | 复制
 Ctrl + Shift + V | 粘贴
+
+## 一些有用的快捷键
+
+快捷键           | 功能
+-----------------|-----
+Alt + S | 简单模式
+Alt + R | 透明
