添加组合键和常用快捷键内容

--- a/Xshell/2022-01-26-xshell-中国风配色教程.markdown
+++ b/Xshell/2022-01-26-xshell-中国风配色教程.markdown
@@ -78,14 +78,30 @@ https?://([\\w-]+\\.)+[\\w-]+(/[\\w-./?%&=]*)?$                   | (90, 164, 17
 
 进行一些简单快捷键配置，自己用Ubuntu用习惯了，就按照Ubuntu的快捷键配置Xshell，方便自己的使用，大家可以根据自己的习惯配置。
 
-快捷键           | 功能
+打开自定义按键对应->新建->输入组合键
+
+![新建快捷键](/images/2022/01/新建快捷键.png)
+
+设置好类型和菜单对应自己想要的功能
+
+![组合键操作](/images/2022/01/组合键操作.png)
+
+
+组合键           | 功能
 -----------------|-----
 Ctrl + Shift + C | 复制
 Ctrl + Shift + V | 粘贴
 
 ## 一些有用的快捷键
 
-快捷键           | 功能
+组合键           | 功能
 -----------------|-----
 Alt + S | 简单模式
 Alt + R | 透明
+Ctrl + Alt + T | 新建会话终端
+
+打开自定义按键对应菜单就可以看到所有的快捷键。
+
+![快捷键列表](/images/2022/01/快捷键列表.png)
+
+希望对大家有帮助！
